--- a/analise-csv-ANA.ipynb
+++ b/analise-csv-ANA.ipynb
@@ -1,19 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\PersioPuertasGarciaL\\AppData\\Local\\Temp\\ipykernel_7840\\2340429170.py:20: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
-      "  df = df.apply(pd.to_numeric, errors='ignore')\n"
-     ]
-    }
-   ],
+   "source": [
+    "Esse código calcula informações e cria gráficos a partir da tabela csv de vazões da ANA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -22,7 +20,6 @@
     "import datetime\n",
     "from statsmodels.tsa.seasonal import seasonal_decompose\n",
     "\n",
-    "#Criando um DataFrame pandas com a tabela csv do hidroweb\n",
     "#enconding - transformar dados em um formato especifico\n",
     "#index_col - primeira coluna não é index da tabela (false)\n",
     "#skiprows - pular as 13 linhas iniciais para formar a tabela (Evitando o cabeçalho do hidroweb)\n",
